--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-            <a href="recipes/garlicb.html" >Garlic Bread</a>
+            <a href="recipes/garlicb.html" >Garlic Bread</a><br/>
+
+            <a href="recipes/couscoush.html" >Couscous</a><br/>
+            <a href="recipes/mac.html" >Mac and cheese</a><br/>
     </body>
 </html>
